src/index.css
/* ... */
.list-item {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: row;
  gap: 15px;
}

.search-img {
  display: flex;
  align-items: center;
  background-color: transparent;
}

.navigation-button {
  background-color: #fff !important;
  border-radius: 16px !important;
  padding: 10px !important;
  width: 50px !important;
  height: 56px !important;
}

.navigation-button:hover {
  background-color: #00820d !important;
}

.navigation-button:active {
  background-color: #00680a !important;
}

/* #endregion */

/* #region Main */
.main-container {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 50px;
}

.poster-container {
  width: 100%;
  height: 732px;
  background-image: url("./components/MainPage/img/poster-photo.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border-radius: 28px;
  margin: 40px 0px 0px 40px;
}

.product-list {
  background-color: #fff;
  padding: 24px;
  padding-right: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: column;
  margin-bottom: 0;
  min-width: 376px;
  height: auto;
  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.08);
}

.product-list-container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.ant-dropdown-menu {
  border-radius: 0 !important;
}

.ant-dropdown-menu-item {
  border-radius: 0 !important;
}

.catalog-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  text-decoration: none;
}

.catalog-items {
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  justify-content: center;
  width: 100%;
}

.catalog-item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 50px;
  width: 100%;
  cursor: pointer;
}

.catalog-list {
  display: flex;
  align-items: center;
  gap: 10px;
  color: #1c1817;
  font-size: 24px;
  width: 240px;
  line-height: 150%;
}

.catalog-list:hover {
  color: black;
}

.catalog-item div {
  flex-grow: 1;
}

/* #endregion */
.slider-text {
  padding-left: 50px;
  padding-top: 48px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 24px;
  position: relative;
}

.slider-text::after {
  border-bottom: #00820d;
}

.slider-text h2 {
  font-weight: 500;
  font-size: 42px;
}

.button-content {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  cursor: pointer;
  margin-top: -7px;
}

.button-link {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 24px;
  font-weight: 400;
  word-spacing: 0.2px;
  font-size: 16px;
  color: #00820d;
  text-decoration: none;
  margin-top: 4px;
}

.button-link-active {
  color: #6f4c9a;
}

.button-hr {
  border: 0.5px solid #00820d;
  width: 100%;
  margin: 0;
}

hr.button-hr-active {
  border: 0.5px solid #6f4c9a;
}

.slider-text-button .button-content {
  width: 100%;
}

@media (max-width: 1024px) {
  /* For screens smaller than 1024px */
  .slider-text {
    justify-content: space-between;
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (max-width: 450px) {
  .slider-text h2 {
    font-size: 24px;
  }
  .slider-text { 
    padding-left: 16px;
    padding-right: 16px;
    padding-top: 32px;
 } 
}
/* #endregion */

/* #region Carousel */

.carousel-wrapper {
  background-color: #eae4ee;
  padding-left: 50px;
  padding-top: 50px;
  padding-right: 50px;
  padding-bottom: 24px;
  box-sizing: border-box;
}

.brands-container {
  padding-bottom: 24px;
  background-color: #f8f7fa;
}
.brands-container > div > div {
  margin: 0 auto;
}

.carousel-slide {
  margin-right: 20px;
}

.arrow-container {
  display: flex;
  justify-content: end;
  margin-right: 20px;
  align-items: end;
}
.arrow-container > div {
  display: flex;
}
.btn-arrow-prev {
  width: 32px;
  height: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 12px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border: 2px solid #00820d;
  border-right: none;
  outline: none;
}
.btn-arrow-next {
  width: 32px;
  height: 32px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 12px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border: 2px solid #00820d;
  border-left: none;
  outline: none;
}
/* when button hovered --- start*/
.arrow-container > div:hover .btn-arrow-prev,
.arrow-container > div:hover .btn-arrow-next {
  cursor: pointer;
}
.arrow-container > div:hover .btn-arrow-prev {
  border: 3px solid #4da856 !important;
  border-right: none !important;
}
.arrow-container > div:hover .btn-arrow-next {
  border: 3px solid #4da856 !important;
  border-left: none !important;
}
/* when button hovered --- end*/

/* when button active --- start*/
.arrow-container > div .btn-arrow-prev:active {
  border: 3px solid #00680a !important;
  border-right: none !important;
  outline: none;
}
.arrow-container > div .btn-arrow-next:active {
  border: 3px solid #00680a !important;
  border-left: none !important;
  outline: none;
}
.arrow-container > div .btn-arrow-prev:active svg path,
.arrow-container > div .btn-arrow-next:active svg path {
  stroke-width: 2.5px;
  stroke: #00680a !important;
}
/* when button active --- end*/

/* when button disabled --- start*/
.arrow-container > div .btn-arrow-prev.disabled {
  border: 2px solid #c3c3c5 !important;
  border-right: none !important;
  cursor: not-allowed;
}
.arrow-container > div .btn-arrow-next.disabled {
  border: 2px solid #c3c3c5 !important;
  border-left: none !important;
  cursor: not-allowed;
}
.arrow-container > div .btn-arrow-prev.disabled:hover {
  border: 3px solid #c3c3c5 !important;
  border-right: none !important;
}
.arrow-container > div .btn-arrow-next.disabled:hover {
  border: 3px solid #c3c3c5 !important;
  border-left: none !important;
}
/* ... */

